<resources>
    <string name="app_name">Proyecto_Cafeteria</string>
    <string name="title_home">Home</string>
    <string name="title_pedido">Pedido</string>
    <string name="title_perfil">Perfil</string>
    <string name="title_producto">Producto</string>
    <string name="title_cliente">Cliente</string>
    <string name="text_login">"Bienvenida ! "</string>
    <string name="text_usuario">usuario</string>
    <string name="text_password">contraseña</string>
    <string name="button_login">Iniciar Sessión</string>
    <string name="button_Registrar">Registrar</string>
    <string name="text_nombre">Nombre</string>
    <string name="text_apellido">Apellido</string>
    <string name="text_fnacimiento">Fecha de Nacimiento:</string>
    <string name="text_telefono">Teléfono</string>
    <string name="radio_usuario">Usuario</string>
    <string name="radio_admin">Admin</string>
    <string name="text_registrar_usuario">Registrar tu Cuenta</string>
    <string name="text_email">Email</string>
    <string name="button_cancel">Cancelar</string>
    <string name="title_reserva">Reserva</string>
    <string name="button_buscar">Buscar</string>
    <string name="button_add">Añadir</string>
    <string name="button_modificar">Modificar</string>
    <string name="button_eliminar">Eliminar</string>
    <string name="titulo_modificar_usuario">Modificar el Usuario</string>
    <string name="text_descripcion">Descripción</string>
    <string name="text_precio">Precio</string>
    <string name="text_stock">Stock</string>
    <string name="title_add_producto">Añadir Productos</string>
    <string name="button_limpiar">Limpiar</string>
    <string name="text_nombreProducto">Nombre Producto</string>
    <string name="text_cantidad">Cantidad</string>
    <string name="text_precioUnidad">Precio Unidad</string>
    <string name="text_precioTotal">PrecioTotal</string>
    <string name="text_seleccionaTodos">Todos</string>
    <string name="text_Total">Total :</string>
    <string name="text_terminar">Terminar</string>
    <string name="text_precioPrincipal">0.0€</string>
    <string name="text_carrito">Carrito</string>
    <string name="text_cero">0</string>
    <string name="button_pedido">Pedido</string>
    <string name="text_contactUs">Contactar con Nosotros</string>
    <string name="text_coma">,</string>
    <string name="text_aceptar">Aceptar</string>
    <string name="text_pedido_historico">Pedido Historico</string>
    <string name="dialog_no_existe_usuario">La contraseña o el correo está mal, por favor volver a introducir</string>
    <string name="error_usuario_cuenta">Error de Iniciar la sessión</string>
    <string name="text_salir">Exit</string>
    <string name="text_fecha">Fecha :</string>
    <string name="text_comentario">Comentario</string>
    <string name="text_enviar">Enviar</string>


</resources>
