<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation_admin"
    app:startDestination="@+id/navigation_admin_pedido">

    <fragment
        android:id="@+id/navigation_admin_pedido"
        android:name="com.example.proyecto_cafeteria.fragment.Admin.Pedido.PedidoFragment"
        android:label="@string/title_pedido"
        tools:layout="@layout/fragment_admin_pedido" />

    <fragment
        android:id="@+id/navigation_admin_reserva"
        android:name="com.example.proyecto_cafeteria.fragment.Admin.Reserva.ReservaFragment"
        android:label="@string/title_reserva"
        tools:layout="@layout/fragment_admin_reserva" />


    <fragment
        android:id="@+id/navigation_admin_producto"
        android:name="com.example.proyecto_cafeteria.fragment.Admin.Producto.ProductoFragment"
        android:label="@string/title_producto"
        tools:layout="@layout/fragment_admin_producto" />


    <fragment
        android:id="@+id/navigation_admin_cliente"
        android:name="com.example.proyecto_cafeteria.fragment.Admin.Cliente.ClienteFragment"
        android:label="@string/title_cliente"
        tools:layout="@layout/fragment_admin_cliente" />
</navigation>