<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_pedido_producto_nombre"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_nombreProducto"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/text_pedido_producto_cantidad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_cantidad"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:id="@+id/text_pedido_producto_precio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_precio"
            android:textSize="20sp"
            android:textColor="@color/colorRed"/>
    </LinearLayout>
</LinearLayout>