<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_marginTop="10dp"
    android:background="@android:color/white"
    android:descendantFocusability="blocksDescendants"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/imagen_carrito_producto"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_gravity="center_vertical"
        android:src="@mipmap/ic_launcher" />

    <LinearLayout
        android:layout_width="215dp"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_carrito_nombreProducto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_nombre"
            android:textColor="#FF000000"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_carrito_precio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_precioPrincipal"
                android:textColor="#FFFA3C3C"
                android:textSize="14sp" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_carrito_stock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_stock"
                android:textColor="#FF9B9B9B"
                android:textSize="13sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_carrito_unidades"
                    android:layout_width="23dp"
                    android:layout_height="16dp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginRight="1dp"
                    android:background="#FFF1F1F1"
                    android:gravity="center"
                    android:text="@string/text_cero"
                    android:textColor="#FF000000"
                    android:textSize="13sp" />

            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/button_carrito_eliminar"
        android:layout_width="45dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@android:drawable/ic_menu_delete"
        android:backgroundTint="@color/colorRed" />
</LinearLayout>
