<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text_add_producto_descipcion"
            android:layout_width="135dp"
            android:layout_height="45dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/text_descripcion"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_add_producto_nombre" />

        <TextView
            android:id="@+id/text_add_producto_precio"
            android:layout_width="135dp"
            android:layout_height="45dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/text_precio"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_add_producto_descipcion" />

        <TextView
            android:id="@+id/text_add_producto_stock"
            android:layout_width="135dp"
            android:layout_height="45dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/text_stock"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_add_producto_precio" />

        <TextView
            android:id="@+id/text_add_producto_nombre"
            android:layout_width="135dp"
            android:layout_height="45dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="150dp"
            android:gravity="center"
            android:text="@string/text_nombre"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edit_add_producto_nombre"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="150dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintStart_toEndOf="@+id/text_add_producto_nombre"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edit_add_producto_descripcion"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            app:layout_constraintStart_toEndOf="@+id/text_add_producto_descipcion"
            app:layout_constraintTop_toBottomOf="@+id/edit_add_producto_nombre" />

        <EditText
            android:id="@+id/edit_add_producto_precio"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:inputType="numberDecimal"
            app:layout_constraintStart_toEndOf="@+id/text_add_producto_precio"
            app:layout_constraintTop_toBottomOf="@+id/edit_add_producto_descripcion" />

        <EditText
            android:id="@+id/edit_add_producto_stock"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintStart_toEndOf="@+id/text_add_producto_stock"
            app:layout_constraintTop_toBottomOf="@+id/edit_add_producto_precio" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/button_add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_add_producto_stock" />

        <Button
            android:id="@+id/button_add_producto_limpiar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="25dp"
            android:layout_marginRight="25dp"
            android:text="@string/button_limpiar"
            app:layout_constraintEnd_toStartOf="@+id/button"
            app:layout_constraintTop_toBottomOf="@+id/edit_add_producto_stock" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/button_add_prdocuto_volver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="45dp"
            android:clickable="true"
            app:backgroundTint="#03A9F4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_menu_revert" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="125dp"
            android:layout_marginRight="125dp"
            android:text="@string/title_add_producto"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button_add_prdocuto_volver"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>