<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="255dp"
        android:orientation="horizontal">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/contraint_pedido"
            android:layout_width="wrap_content"
            android:layout_height="318dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/text_pedido_id_Pedido"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="15dp"
                android:text="@string/button_pedido"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_pedido_email"
                android:layout_width="200dp"
                android:layout_height="35dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/text_email"
                app:layout_constraintStart_toEndOf="@+id/text_pedido_id_Pedido"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_pedido_precioTotal"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.101"
                app:layout_constraintStart_toEndOf="@+id/textView7"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="24dp"
                android:text="@string/text_precioTotal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_pedido_id_Pedido" />

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="413dp"
                android:layout_height="166dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.66"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_pedido_precioTotal"
                app:layout_constraintVertical_bias="0.78">

                <ListView
                    android:id="@+id/list_pedido_producto"
                    android:layout_width="match_parent"
                    android:layout_height="136dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/text_fecha"
                app:layout_constraintStart_toEndOf="@+id/text_pedido_id_Pedido"
                app:layout_constraintTop_toBottomOf="@+id/text_pedido_email" />

            <TextView
                android:id="@+id/text_pedido_fecha"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toEndOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/text_pedido_email" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>


    <!--<ExpandableListView
        android:id="@+id/anddroid_list"
        android:layout_width="424dp"
        android:layout_height="87dp" />-->



</LinearLayout>